load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

config_setting(
    name = "macos_os",
    constraint_values = [
        "@platforms//os:osx",
    ],
)

# TODO: FIX ME

swift_binary(
    name = "local_package",
    srcs = ["main.swift"],
    # Workaround for missing libswift_Concurrency.dylib
    # https://forums.swift.org/t/swift-concurrency-back-deploy-issue/53917/10
    # linkopts = [
    #     "-Wl",
    #     "-weak-lswift_Concurrency",
    #     "-Wl",
    #     "-rpath",
    #     "/usr/lib/swift",
    # ],
    linkopts = select({
        ":macos_os": [
            "-Wl",
            "-weak-lswift_Concurrency",
            "-Wl",
            "-rpath",
            "/usr/lib/swift",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//swift:__subpackages__"],
    deps = [
        "@swift_pkgs//foo-kit:FooKit",
        "@swift_pkgs//swift-log:Logging",
        "@swift_pkgs//swift-nio:NIO",
    ],
)

sh_test(
    name = "local_package_test",
    srcs = ["local_package_test.sh"],
    data = [":local_package"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
