load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "package_with_deps",
    srcs = ["main.swift"],
    visibility = ["//swift:__subpackages__"],
    deps = [
        "@apple_swift_log//:Logging",
        "@apple_swift_nio//:NIO",
        "@vapor_async_kit//:AsyncKit",
    ],
)

sh_test(
    name = "package_with_deps_test",
    srcs = ["package_with_deps_test.sh"],
    data = [":package_with_deps"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
