load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

platform(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        # "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        # "@platforms//cpu:arm64",
        "@platforms//cpu:aarch64",
    ],
)

# platform(
#     name = "macos_arm64e",
#     constraint_values = [
#         "@platforms//os:macos",
#         "@platforms//cpu:arm64e",
#     ],
# )

platform(
    name = "ios_arm64",
    constraint_values = [
        "@platforms//os:ios",
        "@platforms//cpu:arm64",
    ],
)

swift_binary(
    name = "package_with_deps",
    srcs = ["main.swift"],
    visibility = ["//swift:__subpackages__"],
    deps = [
        "@swift_pkgs//foo-kit:FooKit",
        "@swift_pkgs//swift-log:Logging",
        "@swift_pkgs//swift-nio:NIO",
    ],
)

sh_test(
    name = "package_with_deps_test",
    srcs = ["package_with_deps_test.sh"],
    data = [":package_with_deps"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
