load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "package_with_shared_deps",
    srcs = ["main.swift"],
    visibility = ["//swift:__subpackages__"],
    deps = [
        "@swift_pkgs//foo-kit:FooKit",
        "@swift_pkgs//swift-log:Logging",
        "@swift_pkgs//swift-nio:NIO",
    ],
)

sh_test(
    name = "package_with_shared_deps_test",
    srcs = ["package_with_shared_deps_test.sh"],
    data = [":package_with_shared_deps"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
