load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "simple",
    srcs = ["main.swift"],
    visibility = ["//swift:__subpackages__"],
    deps = [
        "@swift_pkgs//swift-log:Logging",
    ],
)

sh_test(
    name = "simple_revision_test",
    srcs = ["simple_revision_test.sh"],
    data = [":simple"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
