load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "simple_with_binary",
    srcs = ["main.swift"],
    visibility = ["//swift:__subpackages__"],
    deps = [
        "@swift_pkgs//swift-log:Logging",
    ],
)

sh_test(
    name = "simple_with_binary_test",
    srcs = ["simple_with_binary_test.sh"],
    data = [":simple_with_binary"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Make sure that the binary is referenced. Otherwise, Bazel won't build it.
alias(
    name = "swiftlint",
    actual = "@swift_utils//SwiftLint:swiftlint",
)
