# Vapor was not happy building under 13.2.1. Fix the version for now.

xcode_version(
    name = "version13_1_0_13A1030d",
    aliases = [
        "13",
        "13A1030d",
        "13.1.0.13A1030d",
        "13.1",
        "13.1.0",
    ],
    default_ios_sdk_version = "15.0",
    default_macos_sdk_version = "12.0",
    default_tvos_sdk_version = "15.0",
    default_watchos_sdk_version = "8.0",
    version = "13.1.0.13A1030d",
)

xcode_config(
    name = "host_xcodes",
    default = ":version13_1_0_13A1030d",
    versions = [
        ":version13_1_0_13A1030d",
    ],
)
