load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["module.modulemap.tpl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "spm_package",
    srcs = ["spm_package.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        "@erickj_bazel_json//lib:json_parser.bzl",
    ],
)

bzl_library(
    name = "spm_repository",
    srcs = ["spm_repository.bzl"],
    visibility = ["//spm:__subpackages__"],
)

sh_binary(
    name = "exec_spm_build",
    srcs = ["exec_spm_build.sh"],
    visibility = ["//visibility:public"],
)
