load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["module.modulemap.tpl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "spm_package",
    srcs = ["spm_package.bzl"],
    visibility = ["//spm:__subpackages__"],
)

bzl_library(
    name = "spm_repositories",
    srcs = ["spm_repositories.bzl"],
    visibility = ["//spm:__subpackages__"],
)

sh_binary(
    name = "exec_macos_build",
    srcs = ["exec_macos_build.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "exec_linux_build",
    srcs = ["exec_linux_build.sh"],
    visibility = ["//visibility:public"],
)
