load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

exports_files(
    ["module.modulemap.tpl"],
    visibility = ["//visibility:public"],
)

# External Libraries

bzl_library(
    name = "bazel_tools_cpp_toolchain_utils",
    srcs = ["@bazel_tools//tools/cpp:toolchain_utils.bzl"],
    visibility = ["//spm:__subpackages__"],
)

bzl_library(
    name = "rules_cc_action_names",
    srcs = ["@bazel_build_rules_cc//cc:action_names.bzl"],
    visibility = ["//spm:__subpackages__"],
)

bzl_library(
    name = "rules_cc_defs",
    srcs = [
        "@bazel_build_rules_cc//cc:bzl_srcs",
    ],
    visibility = ["//spm:__subpackages__"],
)

# Package Libraries

bzl_library(
    name = "actions",
    srcs = ["actions.bzl"],
    visibility = ["//spm:__subpackages__"],
)

bzl_library(
    name = "bazel_build_declarations",
    srcs = ["bazel_build_declarations.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":build_declarations",
        ":clang_files",
    ],
)

bzl_library(
    name = "bazel_clang_library",
    srcs = ["bazel_clang_library.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":rules_cc_defs",
        "@build_bazel_rules_swift//swift",
    ],
)

bzl_library(
    name = "build_declarations",
    srcs = ["build_declarations.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":references",
        "@bazel_skylib//lib:sets",
    ],
)

bzl_library(
    name = "clang_files",
    srcs = ["clang_files.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":repository_files",
        "//spm/private/modulemap_parser:declarations",
        "//spm/private/modulemap_parser:parser",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:sets",
    ],
)

bzl_library(
    name = "package_descriptions",
    srcs = ["package_descriptions.bzl"],
    visibility = [
        "//spm:__subpackages__",
    ],
    deps = [
        ":packages",
        ":references",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:sets",
    ],
)

bzl_library(
    name = "packages",
    srcs = ["packages.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":references",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:types",
    ],
)

bzl_library(
    name = "platforms",
    srcs = ["platforms.bzl"],
    visibility = [
        "//spm:__subpackages__",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":actions",
    ],
)

bzl_library(
    name = "references",
    srcs = ["references.bzl"],
    visibility = [
        "//spm:__subpackages__",
    ],
)

bzl_library(
    name = "repository_files",
    srcs = ["repository_files.bzl"],
    visibility = ["//spm:__subpackages__"],
)

bzl_library(
    name = "repository_utils",
    srcs = ["repository_utils.bzl"],
    visibility = ["//spm:__subpackages__"],
)

bzl_library(
    name = "resolved_packages",
    srcs = ["resolved_packages.bzl"],
)

bzl_library(
    name = "spm_archive",
    srcs = ["spm_archive.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":bazel_tools_cpp_toolchain_utils",
        ":rules_cc_action_names",
    ],
)

bzl_library(
    name = "spm_autoconfiguration",
    srcs = ["spm_autoconfiguration.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":repository_utils",
    ],
)

bzl_library(
    name = "spm_build_declarations",
    srcs = ["spm_build_declarations.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":build_declarations",
    ],
)

bzl_library(
    name = "spm_clang_library",
    srcs = ["spm_clang_library.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":package_descriptions",
        ":rules_cc_defs",
        ":spm_filegroup",
    ],
)

bzl_library(
    name = "spm_common",
    srcs = ["spm_common.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "spm_filegroup",
    srcs = ["spm_filegroup.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":providers",
        ":spm_package_info_utils",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "spm_linux_toolchain",
    srcs = ["spm_linux_toolchain.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":providers",
        ":swift_toolchains",
    ],
)

bzl_library(
    name = "spm_package",
    srcs = ["spm_package.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":actions",
        ":package_descriptions",
        ":packages",
        ":platforms",
        ":providers",
        ":references",
        ":spm_common",
        ":swift_toolchains",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "spm_package_info_utils",
    srcs = ["spm_package_info_utils.bzl"],
    visibility = ["//spm:__subpackages__"],
)

bzl_library(
    name = "spm_repositories",
    srcs = ["spm_repositories.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":bazel_build_declarations",
        ":build_declarations",
        ":clang_files",
        ":package_descriptions",
        ":packages",
        ":references",
        ":resolved_packages",
        ":spm_build_declarations",
        ":spm_common",
        ":spm_versions",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:versions",
    ],
)

bzl_library(
    name = "spm_swift_binary",
    srcs = ["spm_swift_binary.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":providers",
        ":spm_package_info_utils",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "spm_swift_library",
    srcs = ["spm_swift_library.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":spm_archive",
        ":spm_filegroup",
        "@build_bazel_rules_swift//swift",
    ],
)

bzl_library(
    name = "spm_system_library",
    srcs = ["spm_system_library.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":spm_filegroup",
        "@build_bazel_rules_swift//swift",
    ],
)

bzl_library(
    name = "spm_versions",
    srcs = ["spm_versions.bzl"],
    visibility = ["//spm:__subpackages__"],
)

bzl_library(
    name = "spm_xcode_toolchain",
    srcs = ["spm_xcode_toolchain.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":platforms",
        ":providers",
        ":swift_toolchains",
    ],
)

bzl_library(
    name = "swift_toolchains",
    srcs = ["swift_toolchains.bzl"],
    visibility = [
        "//spm:__subpackages__",
    ],
)

sh_binary(
    name = "exec_spm_build",
    srcs = ["exec_spm_build.sh"],
    visibility = ["//visibility:public"],
)

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
