load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

genrule(
    name = "current_bazel_version_bzl",
    srcs = ["//:.bazelversion"],
    outs = ["current_bazel_version.bzl"],
    cmd = """\
current_version="$$(cat $(location //:.bazelversion))"
echo "CURRENT_VERSION = \\"$${current_version}\\"" > "$@"
""",
)

bzl_library(
    name = "current_bazel_version",
    srcs = [":current_bazel_version_bzl"],
)
