load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["integration_test_runner.sh"])

bzl_library(
    name = "bazel_integration_test",
    srcs = ["bazel_integration_test.bzl"],
    deps = [
        "//:bazel_versions",
    ],
)

sh_binary(
    name = "update_deleted_packages",
    srcs = ["update_deleted_packages.sh"],
)
