load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

exports_files(["Package.swift"])

# filegroup(
#     name = "all_srcs",
#     srcs = glob([
#         "Package.swift",
#         "Package.resolved",
#     ]) + glob([
#         "Sources/**/*.swift",
#         "Tests/**/*.swift",
#     ]),
#     visibility = ["//:__subpackages__"],
# )
