load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "tokens",
    srcs = ["tokens.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [],
)

bzl_library(
    name = "tokenizer",
    srcs = ["tokenizer.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":tokens",
    ],
)
